--- a/Learn.css
+++ b/Learn.css
@@ -169,30 +169,30 @@ button:last-child {
 
 
 /* Responsive styles */
-@media (max-width: 992px) {
+/* @media (max-width: 992px) {
     .header-container {
-        font-size: 0.875rem; /* Adjust font size for smaller screens */
+        font-size: 0.875rem; 
     }
 
     .navbar-menu {
-        font-size: 0.875rem; /* Adjust font size for smaller screens */
+        font-size: 0.875rem; 
     }
 
     .left-div, .right-div {
-        margin-right: 20px; /* Reduce margin */
-        flex: 100%; /* Full width */
+        margin-right: 20px; 
+        flex: 100%; 
     }
 
     .container {
-        padding: 1.5rem; /* Add padding */
+        padding: 1.5rem; 
     }
 
     #header1 {
-        font-size: 1.75rem; /* Adjust font size for smaller screens */
+        font-size: 1.75rem; 
     }
 
     .footer-flex {
-        flex-direction: column; /* Stack items vertically */
+        flex-direction: column; 
         align-items: flex-start;
     }
     body{
@@ -200,7 +200,7 @@ button:last-child {
         flex-direction: column;
         font-family: Arial, sans-serif;
         background-color: #f4f4f4;
-        font-size: 1rem; /* Use relative units */
+        font-size: 1rem; 
         overflow-x: hidden;
     }
 }
@@ -236,7 +236,7 @@ button:last-child {
     }
 
     #header1 {
-        font-size: 1.5rem; /* Adjust font size for smaller screens */
+        font-size: 1.5rem; 
     }
 }
 
@@ -248,6 +248,785 @@ button:last-child {
     }
 
     #header1 {
-        font-size: 1.25rem; /* Further adjust font size for smaller screens */
+        font-size: 1.25rem; 
     }
+} */
+
+/* Responsive styles */
+/*/////////////////////////////////// DONE ////////////////////////////////////*/
+/*375px and 320px*/
+@media (max-width : 425px){
+    body {
+        font-size: 15px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 18px;
+    }
+
+    .links{
+        font-size: 10px;
+    }
+    #header2 {
+        font-size:20px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 15px;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 200px;
+        padding-top: 20px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 200px;
+        height: 10px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 2px;
+        padding-right: 2px;
+        padding-bottom: 5px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 40px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 10px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 4px 5px;
+        font-size: 12px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 50px;
+        width: 100px;
+    }
+}
+
+
+/*///////////////////////////////////  DONE ///////////////////////////////////*/
+/*425px*/
+@media (min-width : 426px) and (max-width : 600px){
+    body {
+        font-size: 18px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 20px;
+    }
+
+    .links{
+        font-size: 16px;
+    }
+    #header2 {
+        font-size:20px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 18px;
+        margin-top: 15.4%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 200px;
+        padding-top: 5px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 100px;
+        height: 20px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 5px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 50px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 10px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 4px 5px;
+        font-size: 12px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 70px;
+        width: 100px;
+    }
+}
+
+
+/*////////////////////////////////////// DONE /////////////////////////////////////////*/
+@media (min-width: 601px) and (max-width : 768px){
+    body {
+        font-size: 20px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 25px;
+    }
+
+    .links{
+        font-size: 15px;
+    }
+    #header2 {
+        font-size:25px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 20px;
+        margin-top: 2%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        padding-top: 10px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 100px;
+        height: 100px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 90px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+        padding-bottom: 30px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 10px;
+        font-size: 14px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 80px;
+        width: 120px;
+    }
+}
+
+
+
+/*//////////////////////////////////////// DONE //////////////////////////////////////*/
+@media (min-width: 769px) and (max-width: 992px) {
+    body {
+        font-size: 25px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 30px;
+    }
+
+    .links{
+        font-size: 20px;
+    }
+    #header2 {
+        font-size:30px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 25px;
+        margin-top: 11.5%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        padding-top: 10px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 200px;
+        height: 100px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 90px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+        padding-bottom: 5px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 10px;
+        font-size: 20px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 150px;
+        width: 200px;
+    }
+} 
+
+
+/*////////////////////////////////////// DONE /////////////////////////////////////////*/
+@media (min-width: 993px) and (max-width: 1024px) {
+    body {
+        font-size: 25px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 35px;
+    }
+
+    .links{
+        font-size: 20px;
+    }
+    #header2 {
+        font-size:35px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 25px;
+        margin-top: 10%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 200px;
+        padding-top: 20px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 200px;
+        height: 100px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 90px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+        padding-bottom: 30px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 10px;
+        font-size: 17px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 80px;
+        width: 120px;
+    }
+}
+
+
+/*/////////////////////////////////////// DONE ////////////////////////////////////////*/
+@media (min-width: 1025px) and (max-width: 1080px) {
+    body {
+        font-size: 25px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 30px;
+    }
+
+    .links{
+        font-size: 20px;
+    }
+    #header2 {
+        font-size:30px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 25px;
+        margin-top: 10.5%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        padding-top: 10px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 200px;
+        height: 100px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 90px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+        padding-bottom: 5px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 10px;
+        font-size: 20px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 150px;
+        width: 200px;
+    }
+}
+
+
+
+/*////////////////////////////////////// DONE /////////////////////////////////////////*/
+@media (min-width: 1081px) and (max-width: 1440px) {
+    body {
+        font-size: 40px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 50px;
+    }
+
+    .links{
+        font-size: 30px;
+    }
+    #header2 {
+        font-size: 50px;
+    }
+
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 40px;
+        margin-top: 2.5%;
+
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 290px;
+        padding-top: 10px;
+    }
+
+    .map-container {
+        max-width: 100%;
+        max-height: 100%;
+        width: 280px;
+        height: 200px;
+        border: 0;
+    }
+
+
+    main {
+        padding-left: 100px;
+        padding-right: 100px;
+        padding-bottom: 20px;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        background-color: #c9b90c21;
+        height: 150px;
+    }
+
+    .navbar-menu {
+        display: flex;
+        list-style: none;
+        padding: 0;
+        font-weight: 600;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-left: 30px;
+    }
+
+    .navbar-menu a {
+        color: #000000;
+        text-decoration: none;
+        padding: 10px 20px;
+        font-size: 25px;
+    }
+
+    .navbar-menu a:hover {
+        background-color: rgba(255, 241, 89, 0.304);
+        border-radius: 4px;
+    }
+
+    .navbar-logo a img{
+        height: 150px;
+        width: 200px;
+    }
+}
+
+
+
+/*/////////////////////////////////////// DONE ///////////////////////////////////*/
+@media (min-width: 1441px) and (max-width: 2560px) {
+    body {
+        font-size: 70px;
+        overflow-x: scroll;
+    }
+
+    #header1 {
+        font-size: 90px;
+    }
+
+    .links{
+        font-size: 60px;
+    }
+    #header2 {
+        font-size: xx-large;
+    }
+
+
+    .navbar-menu a {
+        font-size: large;
+    }
+
+    .main-footer {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        width: 100%;
+        position: relative;
+        bottom: 0; 
+        font-size: 65px;
+        margin-top: 5%;
+    }
+    
+    .footer-flex {
+        background-color: #c9b90c21;
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .left-div, .right-div {
+        flex: 2;
+        min-width: 290px;
+        padding-top: 30px;
+    }
+
+.map-container {
+    max-width: 100%;
+    max-height: 100%;
+    width: 550px;
+    height: 320px;
+    border: 0;
+}
+
+
+main {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 20px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #c9b90c21;
+}
+
+.navbar-menu {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    font-size: 70px;
+    font-weight: 600;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 30px;
+    size: 200px;
+}
+
+.navbar-menu a {
+    color: #000000;
+    text-decoration: none;
+    padding: 20px 30px;
+    font-size: 50px;
+}
+
+.navbar-menu a:hover {
+    background-color: rgba(255, 241, 89, 0.304);
+    border-radius: 4px;
+}
+
+.navbar-logo a img{
+    height: 300px;
+    width: 500px;
+}
 }
